@@ -10,3 +10,4 @@ unreleased
 
   * Make sure Curation derives its hash code (#hash) directly from its value
   * Fix test for setting `false` characteristic
+  * Don't try keys.sort on hashes with symbol keys in 1.8 (it blows up)... anyway keys.to_set is way faster
